--- a/app/components/record-button/styles.scss
+++ b/app/components/record-button/styles.scss
@@ -24,7 +24,6 @@
   border-radius: 50%;
   border: none;
   cursor: pointer;
-  pointer-events: none;
   background: radial-gradient(
     circle
     rgb(240, 240, 240) 50%,
@@ -36,12 +35,15 @@
   position: absolute;
   left: 50%;
   top:  50%;
-  content: '\f04b';
   font-family: FontAwesome;
   font-size: 16px;
-  color: rgb(110, 110, 110);
-  transform: translate(-35%, -50%);
+  color: var(--color-danger);
   z-index: 1;
+}
+
+.record-button--start::after {
+  content: '\f04b';
+  transform: translate(-35%, -50%);
 }
 
 .record-button--stop::after {
@@ -62,16 +64,7 @@
   text-align: right;
 }
 
-&.ready .record-button {
-  pointer-events: all;
-  cursor: pointer;
-}
-
-&.ready .record-button::after {
-  color: var(--color-danger);
-}
-
-&.recording .record-button-container {
+&.recording .record-button-container--start-stop {
   width: 9.5rem;
 }
 
@@ -85,6 +78,7 @@
   .record-button-container {
     height: 2rem;
     width: 2rem;
+    margin-right: 0.5rem;
   }
 
   .record-button {
@@ -94,7 +88,7 @@
     left: 0.2rem;
   }
 
-  &.recording .record-button-container {
+  &.recording .record-button-container--start-stop {
     width: 7rem;
   }
 }
