--- a/app/components/task-selection/template.hbs
+++ b/app/components/task-selection/template.hbs
@@ -34,7 +34,7 @@
 </div>
 <div class="form-group {{if error 'has-error'}}" data-test-tracking-task>
   {{#if showLabels}}
-    <label>Task <span class="required">*</span></label>
+    <label>Task {{#if required}}<span class="required">*</span>{{/if}}</label>
   {{/if}}
   {{#power-select
     renderInPlace = true
