--- a/app/components/tracking-bar/styles.scss
+++ b/app/components/tracking-bar/styles.scss
@@ -1,6 +1,6 @@
 & {
   background: white;
-  border-bottom: 0.1rem solid rgb(220, 220, 220);
+  border-bottom: 1px solid rgb(220, 220, 220);
   padding-bottom: 1.5rem;
   margin-bottom: 1.5rem;
 }
