--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -127,6 +127,9 @@ body {
   margin-bottom: 0;
 }
 
+.no-margin  { margin: 0 !important  }
+.no-padding { padding: 0 !important }
+
 @media (--sm-viewport) {
   .nav-tabs {
     overflow: visible;
