--- a/app/components/date-navigation/template.hbs
+++ b/app/components/date-navigation/template.hbs
@@ -1,12 +1,13 @@
-<div class="date-navigation-container">
-  <div class="btn-group">
-    <button data-test-previous title="Previous" class="btn btn-default" {{action 'setPrevious'}}>{{fa-icon 'arrow-left'}}</button>
-    <button data-test-current title="{{if current (moment-format current 'ddd, ll')}}" class="btn btn-default">{{if current (moment-format current 'ddd, ll')}}</button>
-    <button data-test-next title="Next" class="btn btn-default" {{action 'setNext'}}>{{fa-icon 'arrow-right'}}</button>
-  </div>
-
-  <div class="btn-group">
-    <button data-test-today title="Today" class="btn btn-default" {{action 'setToday'}}>{{fa-icon 'clock-o'}}</button>
-    {{sy-datepicker-btn value=current on-change=(action on-change)}}
-  </div>
+<div class="btn-group">
+  <button data-test-previous title="Previous" class="btn btn-default" {{action 'setPrevious'}}>
+    {{fa-icon 'arrow-left'}}
+  </button>
+  <button data-test-today title="Today" class="btn btn-default" {{action 'setToday'}}>
+    {{fa-icon 'arrow-down'}}
+  </button>
+  <button data-test-next title="Next" class="btn btn-default" {{action 'setNext'}}>
+    {{fa-icon 'arrow-right'}}
+  </button>
 </div>
+
+{{sy-datepicker-btn value=current on-change=(action on-change)}}
