--- a/app/index/activities/template.hbs
+++ b/app/index/activities/template.hbs
@@ -69,7 +69,7 @@
 
 {{#if activityToEdit}}
   {{edit-activity-modal
-    visible   = modalVisible
+    visible   = showActivityEditModal
     model     = activityToEdit
     customers = customers
     projects  = projects
