--- a/app/components/tracking-bar/template.hbs
+++ b/app/components/tracking-bar/template.hbs
@@ -1,12 +1,14 @@
 <form class="form-inline" {{action 'start' on='submit'}}>
   <div class="form-group">
     {{task-selection
-      task      = activity.task
-      customers = customers
-      projects  = projects
-      tasks     = tasks
-      disabled  = activity.active
-      on-change = (action (mut activity.task))
+      _task               = activity.task
+      projects            = projects
+      tasks               = tasks
+      disabled            = activity.active
+      on-search-customers = (action on-search-customers)
+      on-filter-projects  = (action on-filter-projects)
+      on-filter-tasks     = (action on-filter-tasks)
+      on-change           = (action (mut activity.task))
     }}
   </div>
   <div class="form-group" data-test-tracking-comment>
