--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -13,6 +13,7 @@
             day      = d.day
             active   = d.active
             worktime = d.worktime
+            absence  = d.absence
             on-click = (action (mut date))
           }}
         {{/each}}
