Multiple small bugfixes

--- a/app/components/attendance-slider/template.hbs
+++ b/app/components/attendance-slider/template.hbs
@@ -22,5 +22,5 @@
 </div>
 
 <div class="slider-title">
-  {{duration}} {{fa-icon data-test-delete-attendance 'trash' click=(action 'delete')}}
+  <span>{{duration}}</span> {{fa-icon data-test-delete-attendance 'trash' click=(action 'delete')}}
 </div>
