--- a/app/me/template.hbs
+++ b/app/me/template.hbs
@@ -26,11 +26,11 @@
                 <td class="text-right">{{model.activeEmployment.percentage}}%</td>
               </tr>
               <tr>
-                <td>Wortime per day:</td>
+                <td>Worktime per day:</td>
                 <td class="text-right">{{format-duration model.activeEmployment.worktimePerDay false}}</td>
               </tr>
               <tr>
-                <td><strong>Wortime balance:</strong></td>
+                <td><strong>Worktime balance:</strong></td>
                 <td class="text-right">
                   <span class="worktime-balance {{balance-highlight-class model.worktimeBalance}}">
                     {{format-duration model.worktimeBalance false}}
