Transform the since helper to a duration-since component and use ember-concurrency

--- a/app/index/activities/template.hbs
+++ b/app/index/activities/template.hbs
@@ -21,7 +21,7 @@
           <td>{{activity.comment}}</td>
           <td>
             {{#if activity.active}}
-              {{since activity.activeBlock.from activity.duration}}
+              {{duration-since activity.activeBlock.from elapsed=activity.duration}}
             {{else}}
               {{format-duration activity.duration}}
             {{/if}}
