--- a/app/components/record-button/template.hbs
+++ b/app/components/record-button/template.hbs
@@ -2,7 +2,7 @@
   {{#if recording}}
     <button data-test-record-stop type="button" class="record-button record-button--stop" {{action 'stop'}}></button>
     <div class="record-button-timer">
-      {{since activity.activeBlock.from activity.duration}}
+      {{duration-since activity.activeBlock.from elapsed=activity.duration}}
     </div>
   {{else}}
     <button data-test-record-start type="button" class="record-button record-button--start" {{action 'start'}}></button>
