--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,10 +1,10 @@
 @import 'variables';
-@import 'power-select';
 @import 'toolbar';
 @import 'badge';
 @import 'loader';
 @import 'sy-timepicker';
 @import 'ember-power-calendar';
+@import 'ember-searchable-select/style';
 @import 'pod-styles';
 
 :root {
