--- a/app/components/tracking-bar/template.hbs
+++ b/app/components/tracking-bar/template.hbs
@@ -1,31 +1,30 @@
 <form class="form-inline" {{action 'start' on='submit'}}>
-  <div class="form-group">
-    {{task-selection
-      _task               = activity.task
-      projects            = projects
-      tasks               = tasks
-      disabled            = activity.active
-      on-search-customers = (action on-search-customers)
-      on-filter-projects  = (action on-filter-projects)
-      on-filter-tasks     = (action on-filter-tasks)
-      on-change           = (action (mut activity.task))
-    }}
-  </div>
+  {{#task-selection task=tracking.activity.task disabled=tracking.activity.active as |t|}}
+    <div class="form-group" data-test-tracking-customer>
+      {{t.customer}}
+    </div>
+    <div class="form-group" data-test-tracking-project>
+      {{t.project}}
+    </div>
+    <div class="form-group" data-test-tracking-task>
+      {{t.task}}
+    </div>
+  {{/task-selection}}
   <div class="form-group" data-test-tracking-comment>
     {{input
       type        = 'text'
       class       = 'form-control'
       placeholder = 'Comment'
-      value       = activity.comment
-      disabled    = activity.active
+      value       = tracking.activity.comment
+      disabled    = tracking.activity.active
     }}
   </div>
   <div class="form-group">
     {{record-button
-      activity  = activity
-      recording = activity.active
-      on-start  = (action 'start')
-      on-stop   = (action 'stop')
+      activity  = tracking.activity
+      recording = tracking.activity.active
+      on-start  = (action (perform tracking.startActivity))
+      on-stop   = (action (perform tracking.stopActivity))
     }}
   </div>
 </form>
