--- a/app/components/weekly-overview-day/styles.scss
+++ b/app/components/weekly-overview-day/styles.scss
@@ -1,9 +1,10 @@
 & {
-  height: 100%;
+  height: 0%;
   width: 15px;
   position: relative;
   z-index: 1;
   cursor: pointer;
+  transition: height 300ms ease;
 }
 
 &.weekend {
