--- a/app/protected/template.hbs
+++ b/app/protected/template.hbs
@@ -18,17 +18,7 @@
       {{#if loading}}<span class="loader"></span>{{/if}}
       <div class="page-wrapper">
         <div class="page-content page-content--scroll">
-          {{tracking-bar
-            customers = customers
-            projects  = projects
-            tasks     = tasks
-            activity  = currentActivity
-            on-stop   = (action 'stopCurrentActivity')
-            on-start  = (action 'startCurrentActivity')
-            on-search-customers = (route-action 'searchCustomers')
-            on-filter-projects = (route-action 'filterProjects')
-            on-filter-tasks    = (route-action 'filterTasks')
-          }}
+          {{tracking-bar}}
           {{outlet}}
         </div>
       </div>
