--- a/app/protected/template.hbs
+++ b/app/protected/template.hbs
@@ -18,7 +18,7 @@
       {{#if loading}}<span class="loader"></span>{{/if}}
       <div class="page-wrapper">
         <div class="page-content page-content--scroll">
-          {{tracking-bar}}
+          {{tracking-bar data-test-tracking-bar}}
           {{outlet}}
         </div>
       </div>
