--- a/app/index/activities/template.hbs
+++ b/app/index/activities/template.hbs
@@ -1,81 +1,64 @@
-{{#if activities}}
-  <table class="table table--striped table--activities">
-    <tbody>
-      {{#each activities as |activity|}}
-      <tr
-        data-test-activity-row
-        data-test-activity-row-id={{activity.id}}
-        class="{{if activity.active 'primary'}} {{unless activity.task 'warning'}}"
-      >
-          <td>
-            {{#if activity.task}}
-              <div>
-                <strong>{{activity.task.project.name}}</strong> ({{activity.task.project.customer.name}})
-                <br>
-                <small><em>{{activity.task.name}}</em></small>
-              </div>
-            {{else}}
-            <strong>Unknown task</strong>
-            {{/if}}
-          </td>
-          <td>{{activity.comment}}</td>
-          <td>
-            {{#if activity.active}}
-              {{duration-since activity.activeBlock.from elapsed=activity.duration}}
-            {{else}}
-              {{format-duration activity.duration}}
-            {{/if}}
-          </td>
-          <td>
-            <button
-              data-test-edit-activity
-              class="btn btn-default"
-              {{action (queue (action (mut activityToEdit) activity) (action (mut showActivityEditModal) true))}}
-            >
-              {{fa-icon 'pencil'}}
-            </button>
-            {{#if activity.active}}
-              <button
-                data-test-stop-activity
-                class="btn btn-danger"
-                {{action 'stopActivity' activity}}
-              >
-                {{fa-icon 'stop'}}
-              </button>
-            {{else}}
-              <button
-                data-test-start-activity
-                class="btn btn-success"
-                {{action 'startActivity' activity}}
-              >
-                {{fa-icon 'play'}}
-              </button>
-            {{/if}}
-          </td>
-        </tr>
-      {{/each}}
-    </tbody>
-  </table>
-  <div class="text-center">
-    <br>
-    <button
-      class="btn btn-primary"
-      title="Generate reports for all the listed activities above"
-      {{action 'generateReports'}}
-    >
-       Generate reports
-    </button>
+<div class="activities">
+  <div class="activities-edit">{{outlet}}</div>
+  <div class="activities-list">
+    {{#if activities}}
+      <table class="table table--striped table--activities">
+        <tbody>
+          {{#each activities as |activity|}}
+          <tr
+            data-test-activity-row
+            data-test-activity-row-id={{activity.id}}
+            class="{{if activity.active 'primary'}}"
+            {{action 'editActivity' activity}}
+          >
+              <td>
+                {{#if activity.task}}
+                  <div>
+                    <strong>{{activity.task.project.name}}</strong> ({{activity.task.project.customer.name}})
+                    <br>
+                    <small><em>{{activity.task.name}}</em></small>
+                  </div>
+                {{else}}
+                <strong>Unknown task</strong>
+                {{/if}}
+              </td>
+              <td>{{activity.comment}}</td>
+              <td>
+                {{#if activity.active}}
+                  {{duration-since activity.activeBlock.from elapsed=activity.duration}}
+                {{else}}
+                  {{format-duration activity.duration}}
+                {{/if}}
+              </td>
+              <td>
+                {{#if activity.active}}
+                  <button
+                    data-test-stop-activity
+                    class="btn btn-danger"
+                    {{action 'stopActivity' activity bubbles=false}}
+                  >
+                    {{fa-icon 'stop'}}
+                  </button>
+                {{else}}
+                  <button
+                    data-test-start-activity
+                    class="btn btn-success"
+                    {{action 'startActivity' activity bubbles=false}}
+                  >
+                    {{fa-icon 'play'}}
+                  </button>
+                {{/if}}
+              </td>
+            </tr>
+          {{/each}}
+        </tbody>
+      </table>
+      <div class="text-center">
+        <br>
+        <button class="btn btn-primary" title="Generate reports for all the listed activities above" {{action 'generateReports'}}>Generate reports</button>
+      </div>
+    {{else}}
+      <div class="text-center"><em>No activities yet</em></div>
+    {{/if}}
   </div>
-{{else}}
-  <div class="text-center"><em>No activities yet</em></div>
-{{/if}}
-
-{{#if activityToEdit}}
-  {{edit-activity-modal
-    visible   = showActivityEditModal
-    model     = activityToEdit
-    on-close  = (action (mut activityToEdit) null)
-    on-delete = (route-action 'deleteActivity')
-    on-save   = (route-action 'saveActivity')
-  }}
-{{/if}}
+</div>
