--- a/app/index/activities/edit/template.hbs
+++ b/app/index/activities/edit/template.hbs
@@ -13,9 +13,11 @@
       <table class="table table--striped table--activity-blocks">
         <tbody>
           {{#each blocks as |block|}}
-            {{#if block.to}}
-              <tr class="text-center">
-                <td><button class="btn btn-default">{{fa-icon 'trash'}}</button></td>
+            {{#if (and block.to (not block.isDeleted))}}
+              <tr class="text-center" data-test-activity-block-row data-test-activity-block-row-id={{block.id}}>
+                <td>
+                  <button data-test-delete-activity-block class="btn btn-default" {{action 'deleteBlock' block}}>{{fa-icon 'trash'}}</button>
+                </td>
                 <td>{{sy-timepicker max=block.to precision=1 value=block.from on-change=(action (mut block.from))}}</td>
                 <td>-</td>
                 <td>{{sy-timepicker min=block.from precision=1 value=block.to on-change=(action (mut block.to))}}</td>
@@ -24,7 +26,7 @@
             {{/if}}
           {{/each}}
           <tr>
-            <td></td>
+            <td><button data-test-add-activity-block class="btn btn-default" {{action 'addBlock'}}>{{fa-icon 'plus'}}</button></td>
             <td><strong><u>Total:</u></strong></td>
             <td></td>
             <td></td>
