Indicate clickable activity rows

--- a/app/index/activities/template.hbs
+++ b/app/index/activities/template.hbs
@@ -8,7 +8,7 @@
           <tr
             data-test-activity-row
             data-test-activity-row-id={{activity.id}}
-            class="{{if activity.active 'primary'}}"
+            class="pointer {{if activity.active 'primary'}}"
             {{action 'editActivity' activity}}
           >
               <td>
