--- a/app/index/activities/edit/template.hbs
+++ b/app/index/activities/edit/template.hbs
@@ -9,7 +9,7 @@
         <div class="form-group">{{t.project}}</div>
         <div class="form-group">{{t.task}}</div>
       {{/task-selection}}
-      <div class="form-group">{{textarea class='form-control' value=activity.comment}}</div>
+      <div class="form-group">{{textarea class='form-control' placeholder='Enter comment...' value=activity.comment}}</div>
       <table class="table table--striped table--activity-blocks">
         <tbody>
           {{#each blocks as |block|}}
