Inline editing of reports

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -3,6 +3,7 @@
 @import 'badge';
 @import 'loader';
 @import 'activities';
+@import 'reports';
 @import 'ember-power-calendar';
 @import 'pod-styles';
 
