--- a/app/index/reports/template.hbs
+++ b/app/index/reports/template.hbs
@@ -1,74 +1,47 @@
-<div class="btn-toolbar btn-toolbar--right form-group">
-  <button title="Add a new report" class="btn btn-success" {{action 'addReport'}}>Add report</button>
-  <button title="Add a new absence" class="btn btn-success" {{action 'addAbsence'}}>Add absence</button>
-</div>
-
-{{#if (or reports absences)}}
-  <table class="table table--striped">
-    <tbody>
-      {{#each absences as |absence|}}
+<table class="table table--striped table--reports">
+  <tbody>
+    {{#each reports as |report index|}}
+      {{#with (changeset report ReportValidations) as |r|}}
         <tr
-         data-test-absence-row
-         data-test-absence-row-id={{absence.id}}
-         onclick={{action 'editAbsence' absence}}
-         title="Click to edit absence"
-         class="pointer is-absence"
+          data-test-report-row
+          data-test-report-row-id={{report.id}}
         >
-          <td>
-            <strong>{{absence.type.name}}</strong>
-            <br>
-            <small>&nbsp;</small>
+          {{#task-selection task=r.task as |t|}}
+            <td class="form-group {{if r.error.task 'has-error'}}">{{t.customer}}</td>
+            <td class="form-group {{if r.error.task 'has-error'}}">{{t.project}}</td>
+            <td class="form-group {{if r.error.task 'has-error'}}">{{t.task}}</td>
+          {{/task-selection}}
+          <td class="form-group">{{sy-durationpicker data-test-report-duration value=r.duration on-change=(action (mut r.duration))}}</td>
+          <td class="form-group">{{input data-test-report-comment type='text' class='form-control' value=r.comment}}</td>
+          <td class="form-group">
+            <div class="checkbox">
+              {{input data-test-report-review elementId=(concat 'review-' index) type='checkbox' checked=r.review}}
+              <label for="review-{{index}}">Needs review</label>
+            </div>
           </td>
-          <td>{{absence.comment}}</td>
-          <td>{{format-duration absence.duration false}}</td>
-          <td></td>
-        </tr>
-      {{/each}}
-      {{#each reports as |report|}}
-        <tr
-         data-test-report-row
-         data-test-report-row-id={{report.id}}
-         onclick={{action 'editReport' report}}
-         title="Click to edit report"
-         class="pointer {{if report.absenceType 'is-absence'}}"
-        >
-          <td>
-            <strong>{{report.task.project.name}}</strong> ({{report.task.project.customer.name}})
-            <br>
-            <small><em>{{report.task.name}}</em></small>
+          <td class="form-group">
+            <div class="checkbox">
+              {{input data-test-report-not-billable elementId=(concat 'not-billable-' index) type='checkbox' checked=r.notBillable}}
+              <label for="not-billable-{{index}}">Not billable</label>
+            </div>
           </td>
-          <td>{{report.comment}}</td>
-          <td>{{format-duration report.duration false}}</td>
           <td>
-            {{fa-icon (concat (if report.notBillable 'check-') 'square-o') fixedWidth=true}} Not billable
-            <br>
-            {{fa-icon (concat (if report.review 'check-') 'square-o') fixedWidth=true}} Needs review
+            <button data-test-delete-report class="btn btn-danger" {{action 'deleteReport' report}}>{{fa-icon 'trash'}}</button>
+            <button data-test-save-report class="btn btn-primary" {{action 'saveReport' r}} disabled={{not r.isDirty}}>{{fa-icon 'save'}}</button>
           </td>
         </tr>
-      {{/each}}
-    </tbody>
-  </table>
-{{else}}
-  <div class="text-center"><em>No reports yet</em></div>
-{{/if}}
-
-{{#if absenceToEdit}}
-  {{edit-absence-modal
-    visible      = showAbsenceEditModal
-    model        = absenceToEdit
-    absenceTypes = absenceTypes
-    on-close     = (action (mut absenceToEdit) null)
-    on-save      = (route-action 'saveAbsence')
-    on-delete    = (route-action 'deleteAbsence')
-  }}
-{{/if}}
-
-{{#if reportToEdit}}
-  {{edit-report-modal
-    visible   = showReportEditModal
-    model     = reportToEdit
-    on-close  = (action (mut reportToEdit) null)
-    on-save   = (route-action 'saveReport')
-    on-delete = (route-action 'deleteReport')
-  }}
-{{/if}}
+      {{/with}}
+    {{^}}
+      <tr>
+        <td colspan="8" class="text-center">
+          <em>No reports yet</em>
+        </td>
+      </tr>
+    {{/each}}
+    <tr>
+      <td colspan="8" class="text-center">
+        <button data-test-add-report class="btn btn-success" {{action 'addReport'}}>{{fa-icon 'plus'}}</button>
+      </td>
+    </tr>
+  </tbody>
+</table>
