Fix datepicker styling

--- a/app/components/date-navigation/styles.scss
+++ b/app/components/date-navigation/styles.scss
@@ -5,8 +5,8 @@
   padding: 1rem 0;
 }
 
-:not(:first-child)  {
-  margin-left: 10px;
+.btn-group {
+  margin-right: 10px;
 }
 
 .date-navigation-container {
