--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -5,6 +5,7 @@
 @import 'activities';
 @import 'ember-power-calendar';
 @import 'pod-styles';
+@import 'ember-basic-dropdown';
 
 :root {
   --tracking-indicator-size: 10px;
